# graphed-numpy-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M11/: attempts.md
.graphed/M12/: attempts.md
.graphed/M13/: attempts.md
.graphed/M14/: attempts.md
.graphed/M15/: attempts.md
.graphed/M2/: attempts.md
.graphed/M5/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
docs/_templates/autosummary/: module.rst
scripts/: advance.py
src/graphed_numpy/: __init__.py  array.py  creation.py  forms.py  gufunc.py  io.py  projection.py  random.py  reductions.py
tests/extra/m13/: test_handler_argument_errors.py
tests/extra/m15/: test_pandas_free.py
tests/frozen/m11/: README.md  test_elementwise_full.py  test_form_inference.py  test_numpy_array_idiom.py  test_projection_and_determinism.py
tests/frozen/m12/: README.md  test_creation.py  test_random_and_monoids.py  test_reductions_match_numpy.py
tests/frozen/m13/: README.md  m13_helpers.py  test_combination_and_aggregates.py  test_indexing.py  test_manipulation.py
tests/frozen/m14/: README.md  test_apply_gufunc.py
tests/frozen/m15/: README.md  test_parquet_io.py
tests/frozen/m2/: test_backend_methods.py  test_external_payload.py  test_numpy_program.py
tests/frozen/m5/: test_no_overtouch.py  test_projection.py  test_topologies.py
